// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header/> should render 1`] = `
<Header
  classes={
    Object {
      "grow": "Header-grow-1",
    }
  }
  title="Header"
/>
`;

exports[`<Header/> should render components left of the title 1`] = `
<WithStyles(Header)
  left={
    <WithStyles(Button)>
      button
    </WithStyles(Button)>
  }
>
  <Header
    classes={
      Object {
        "grow": "Header-grow-1",
      }
    }
    left={
      <WithStyles(Button)>
        button
      </WithStyles(Button)>
    }
    title="Header"
  >
    <WithStyles(AppBar)
      position="absolute"
    >
      <AppBar
        classes={
          Object {
            "colorDefault": "MuiAppBar-colorDefault-8",
            "colorPrimary": "MuiAppBar-colorPrimary-9",
            "colorSecondary": "MuiAppBar-colorSecondary-10",
            "positionAbsolute": "MuiAppBar-positionAbsolute-4",
            "positionFixed": "MuiAppBar-positionFixed-3",
            "positionRelative": "MuiAppBar-positionRelative-7",
            "positionStatic": "MuiAppBar-positionStatic-6",
            "positionSticky": "MuiAppBar-positionSticky-5",
            "root": "MuiAppBar-root-2",
          }
        }
        color="primary"
        position="absolute"
      >
        <WithStyles(Paper)
          className="MuiAppBar-root-2 MuiAppBar-positionAbsolute-4 MuiAppBar-colorPrimary-9"
          component="header"
          elevation={4}
          square={true}
        >
          <Paper
            className="MuiAppBar-root-2 MuiAppBar-positionAbsolute-4 MuiAppBar-colorPrimary-9"
            classes={
              Object {
                "elevation0": "MuiPaper-elevation0-13",
                "elevation1": "MuiPaper-elevation1-14",
                "elevation10": "MuiPaper-elevation10-23",
                "elevation11": "MuiPaper-elevation11-24",
                "elevation12": "MuiPaper-elevation12-25",
                "elevation13": "MuiPaper-elevation13-26",
                "elevation14": "MuiPaper-elevation14-27",
                "elevation15": "MuiPaper-elevation15-28",
                "elevation16": "MuiPaper-elevation16-29",
                "elevation17": "MuiPaper-elevation17-30",
                "elevation18": "MuiPaper-elevation18-31",
                "elevation19": "MuiPaper-elevation19-32",
                "elevation2": "MuiPaper-elevation2-15",
                "elevation20": "MuiPaper-elevation20-33",
                "elevation21": "MuiPaper-elevation21-34",
                "elevation22": "MuiPaper-elevation22-35",
                "elevation23": "MuiPaper-elevation23-36",
                "elevation24": "MuiPaper-elevation24-37",
                "elevation3": "MuiPaper-elevation3-16",
                "elevation4": "MuiPaper-elevation4-17",
                "elevation5": "MuiPaper-elevation5-18",
                "elevation6": "MuiPaper-elevation6-19",
                "elevation7": "MuiPaper-elevation7-20",
                "elevation8": "MuiPaper-elevation8-21",
                "elevation9": "MuiPaper-elevation9-22",
                "root": "MuiPaper-root-11",
                "rounded": "MuiPaper-rounded-12",
              }
            }
            component="header"
            elevation={4}
            square={true}
          >
            <header
              className="MuiPaper-root-11 MuiPaper-elevation4-17 MuiAppBar-root-2 MuiAppBar-positionAbsolute-4 MuiAppBar-colorPrimary-9"
            >
              <WithStyles(Toolbar)>
                <Toolbar
                  classes={
                    Object {
                      "dense": "MuiToolbar-dense-41",
                      "gutters": "MuiToolbar-gutters-39",
                      "regular": "MuiToolbar-regular-40",
                      "root": "MuiToolbar-root-38",
                    }
                  }
                  disableGutters={false}
                  variant="regular"
                >
                  <div
                    className="MuiToolbar-root-38 MuiToolbar-regular-40 MuiToolbar-gutters-39"
                  >
                    <WithStyles(Button)>
                      <Button
                        classes={
                          Object {
                            "colorInherit": "MuiButton-colorInherit-98",
                            "contained": "MuiButton-contained-88",
                            "containedPrimary": "MuiButton-containedPrimary-89",
                            "containedSecondary": "MuiButton-containedSecondary-90",
                            "disabled": "MuiButton-disabled-97",
                            "extendedFab": "MuiButton-extendedFab-95",
                            "fab": "MuiButton-fab-94",
                            "flat": "MuiButton-flat-82",
                            "flatPrimary": "MuiButton-flatPrimary-83",
                            "flatSecondary": "MuiButton-flatSecondary-84",
                            "focusVisible": "MuiButton-focusVisible-96",
                            "fullWidth": "MuiButton-fullWidth-102",
                            "label": "MuiButton-label-78",
                            "mini": "MuiButton-mini-99",
                            "outlined": "MuiButton-outlined-85",
                            "outlinedPrimary": "MuiButton-outlinedPrimary-86",
                            "outlinedSecondary": "MuiButton-outlinedSecondary-87",
                            "raised": "MuiButton-raised-91",
                            "raisedPrimary": "MuiButton-raisedPrimary-92",
                            "raisedSecondary": "MuiButton-raisedSecondary-93",
                            "root": "MuiButton-root-77",
                            "sizeLarge": "MuiButton-sizeLarge-101",
                            "sizeSmall": "MuiButton-sizeSmall-100",
                            "text": "MuiButton-text-79",
                            "textPrimary": "MuiButton-textPrimary-80",
                            "textSecondary": "MuiButton-textSecondary-81",
                          }
                        }
                        color="default"
                        component="button"
                        disableFocusRipple={false}
                        disabled={false}
                        fullWidth={false}
                        mini={false}
                        size="medium"
                        type="button"
                        variant="text"
                      >
                        <WithStyles(ButtonBase)
                          className="MuiButton-root-77 MuiButton-text-79 MuiButton-flat-82"
                          component="button"
                          disabled={false}
                          focusRipple={true}
                          focusVisibleClassName="MuiButton-focusVisible-96"
                          type="button"
                        >
                          <ButtonBase
                            centerRipple={false}
                            className="MuiButton-root-77 MuiButton-text-79 MuiButton-flat-82"
                            classes={
                              Object {
                                "disabled": "MuiButtonBase-disabled-104",
                                "focusVisible": "MuiButtonBase-focusVisible-105",
                                "root": "MuiButtonBase-root-103",
                              }
                            }
                            component="button"
                            disableRipple={false}
                            disableTouchRipple={false}
                            disabled={false}
                            focusRipple={true}
                            focusVisibleClassName="MuiButton-focusVisible-96"
                            tabIndex="0"
                            type="button"
                          >
                            <button
                              className="MuiButtonBase-root-103 MuiButton-root-77 MuiButton-text-79 MuiButton-flat-82"
                              disabled={false}
                              onBlur={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              onKeyUp={[Function]}
                              onMouseDown={[Function]}
                              onMouseLeave={[Function]}
                              onMouseUp={[Function]}
                              onTouchEnd={[Function]}
                              onTouchMove={[Function]}
                              onTouchStart={[Function]}
                              tabIndex="0"
                              type="button"
                            >
                              <span
                                className="MuiButton-label-78"
                              >
                                button
                              </span>
                              <WithStyles(TouchRipple)
                                center={false}
                                innerRef={[Function]}
                              >
                                <TouchRipple
                                  center={false}
                                  classes={
                                    Object {
                                      "child": "MuiTouchRipple-child-110",
                                      "childLeaving": "MuiTouchRipple-childLeaving-111",
                                      "childPulsate": "MuiTouchRipple-childPulsate-112",
                                      "ripple": "MuiTouchRipple-ripple-107",
                                      "ripplePulsate": "MuiTouchRipple-ripplePulsate-109",
                                      "rippleVisible": "MuiTouchRipple-rippleVisible-108",
                                      "root": "MuiTouchRipple-root-106",
                                    }
                                  }
                                >
                                  <TransitionGroup
                                    childFactory={[Function]}
                                    className="MuiTouchRipple-root-106"
                                    component="span"
                                    enter={true}
                                    exit={true}
                                  >
                                    <span
                                      className="MuiTouchRipple-root-106"
                                    />
                                  </TransitionGroup>
                                </TouchRipple>
                              </WithStyles(TouchRipple)>
                            </button>
                          </ButtonBase>
                        </WithStyles(ButtonBase)>
                      </Button>
                    </WithStyles(Button)>
                    <WithStyles(Typography)
                      className="Header-grow-1"
                      color="inherit"
                      variant="h6"
                    >
                      <Typography
                        align="inherit"
                        className="Header-grow-1"
                        classes={
                          Object {
                            "alignCenter": "MuiTypography-alignCenter-65",
                            "alignJustify": "MuiTypography-alignJustify-67",
                            "alignLeft": "MuiTypography-alignLeft-64",
                            "alignRight": "MuiTypography-alignRight-66",
                            "body1": "MuiTypography-body1-51",
                            "body2": "MuiTypography-body2-50",
                            "button": "MuiTypography-button-53",
                            "caption": "MuiTypography-caption-52",
                            "colorError": "MuiTypography-colorError-76",
                            "colorInherit": "MuiTypography-colorInherit-71",
                            "colorPrimary": "MuiTypography-colorPrimary-72",
                            "colorSecondary": "MuiTypography-colorSecondary-73",
                            "colorTextPrimary": "MuiTypography-colorTextPrimary-74",
                            "colorTextSecondary": "MuiTypography-colorTextSecondary-75",
                            "display1": "MuiTypography-display1-46",
                            "display2": "MuiTypography-display2-45",
                            "display3": "MuiTypography-display3-44",
                            "display4": "MuiTypography-display4-43",
                            "gutterBottom": "MuiTypography-gutterBottom-69",
                            "h1": "MuiTypography-h1-54",
                            "h2": "MuiTypography-h2-55",
                            "h3": "MuiTypography-h3-56",
                            "h4": "MuiTypography-h4-57",
                            "h5": "MuiTypography-h5-58",
                            "h6": "MuiTypography-h6-59",
                            "headline": "MuiTypography-headline-47",
                            "noWrap": "MuiTypography-noWrap-68",
                            "overline": "MuiTypography-overline-62",
                            "paragraph": "MuiTypography-paragraph-70",
                            "root": "MuiTypography-root-42",
                            "srOnly": "MuiTypography-srOnly-63",
                            "subheading": "MuiTypography-subheading-49",
                            "subtitle1": "MuiTypography-subtitle1-60",
                            "subtitle2": "MuiTypography-subtitle2-61",
                            "title": "MuiTypography-title-48",
                          }
                        }
                        color="inherit"
                        gutterBottom={false}
                        headlineMapping={
                          Object {
                            "body1": "p",
                            "body2": "p",
                            "display1": "h1",
                            "display2": "h1",
                            "display3": "h1",
                            "display4": "h1",
                            "h1": "h1",
                            "h2": "h2",
                            "h3": "h3",
                            "h4": "h4",
                            "h5": "h5",
                            "h6": "h6",
                            "headline": "h1",
                            "subheading": "h3",
                            "subtitle1": "h6",
                            "subtitle2": "h6",
                            "title": "h2",
                          }
                        }
                        noWrap={false}
                        paragraph={false}
                        theme={
                          Object {
                            "breakpoints": Object {
                              "between": [Function],
                              "down": [Function],
                              "keys": Array [
                                "xs",
                                "sm",
                                "md",
                                "lg",
                                "xl",
                              ],
                              "only": [Function],
                              "up": [Function],
                              "values": Object {
                                "lg": 1280,
                                "md": 960,
                                "sm": 600,
                                "xl": 1920,
                                "xs": 0,
                              },
                              "width": [Function],
                            },
                            "direction": "ltr",
                            "mixins": Object {
                              "gutters": [Function],
                              "toolbar": Object {
                                "@media (min-width:0px) and (orientation: landscape)": Object {
                                  "minHeight": 48,
                                },
                                "@media (min-width:600px)": Object {
                                  "minHeight": 64,
                                },
                                "minHeight": 56,
                              },
                            },
                            "overrides": Object {},
                            "palette": Object {
                              "action": Object {
                                "active": "rgba(0, 0, 0, 0.54)",
                                "disabled": "rgba(0, 0, 0, 0.26)",
                                "disabledBackground": "rgba(0, 0, 0, 0.12)",
                                "hover": "rgba(0, 0, 0, 0.08)",
                                "hoverOpacity": 0.08,
                                "selected": "rgba(0, 0, 0, 0.14)",
                              },
                              "augmentColor": [Function],
                              "background": Object {
                                "default": "#fafafa",
                                "paper": "#fff",
                              },
                              "common": Object {
                                "black": "#000",
                                "white": "#fff",
                              },
                              "contrastThreshold": 3,
                              "divider": "rgba(0, 0, 0, 0.12)",
                              "error": Object {
                                "contrastText": "#fff",
                                "dark": "#d32f2f",
                                "light": "#e57373",
                                "main": "#f44336",
                              },
                              "getContrastText": [Function],
                              "grey": Object {
                                "100": "#f5f5f5",
                                "200": "#eeeeee",
                                "300": "#e0e0e0",
                                "400": "#bdbdbd",
                                "50": "#fafafa",
                                "500": "#9e9e9e",
                                "600": "#757575",
                                "700": "#616161",
                                "800": "#424242",
                                "900": "#212121",
                                "A100": "#d5d5d5",
                                "A200": "#aaaaaa",
                                "A400": "#303030",
                                "A700": "#616161",
                              },
                              "primary": Object {
                                "contrastText": "#fff",
                                "dark": "#303f9f",
                                "light": "#7986cb",
                                "main": "#3f51b5",
                              },
                              "secondary": Object {
                                "contrastText": "#fff",
                                "dark": "#c51162",
                                "light": "#ff4081",
                                "main": "#f50057",
                              },
                              "text": Object {
                                "disabled": "rgba(0, 0, 0, 0.38)",
                                "hint": "rgba(0, 0, 0, 0.38)",
                                "primary": "rgba(0, 0, 0, 0.87)",
                                "secondary": "rgba(0, 0, 0, 0.54)",
                              },
                              "tonalOffset": 0.2,
                              "type": "light",
                            },
                            "props": Object {},
                            "shadows": Array [
                              "none",
                              "0px 1px 3px 0px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 2px 1px -1px rgba(0, 0, 0, 0.12)",
                              "0px 1px 5px 0px rgba(0, 0, 0, 0.2),0px 2px 2px 0px rgba(0, 0, 0, 0.14),0px 3px 1px -2px rgba(0, 0, 0, 0.12)",
                              "0px 1px 8px 0px rgba(0, 0, 0, 0.2),0px 3px 4px 0px rgba(0, 0, 0, 0.14),0px 3px 3px -2px rgba(0, 0, 0, 0.12)",
                              "0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 1px 10px 0px rgba(0, 0, 0, 0.12)",
                              "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12)",
                              "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12)",
                              "0px 4px 5px -2px rgba(0, 0, 0, 0.2),0px 7px 10px 1px rgba(0, 0, 0, 0.14),0px 2px 16px 1px rgba(0, 0, 0, 0.12)",
                              "0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12)",
                              "0px 5px 6px -3px rgba(0, 0, 0, 0.2),0px 9px 12px 1px rgba(0, 0, 0, 0.14),0px 3px 16px 2px rgba(0, 0, 0, 0.12)",
                              "0px 6px 6px -3px rgba(0, 0, 0, 0.2),0px 10px 14px 1px rgba(0, 0, 0, 0.14),0px 4px 18px 3px rgba(0, 0, 0, 0.12)",
                              "0px 6px 7px -4px rgba(0, 0, 0, 0.2),0px 11px 15px 1px rgba(0, 0, 0, 0.14),0px 4px 20px 3px rgba(0, 0, 0, 0.12)",
                              "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 12px 17px 2px rgba(0, 0, 0, 0.14),0px 5px 22px 4px rgba(0, 0, 0, 0.12)",
                              "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 13px 19px 2px rgba(0, 0, 0, 0.14),0px 5px 24px 4px rgba(0, 0, 0, 0.12)",
                              "0px 7px 9px -4px rgba(0, 0, 0, 0.2),0px 14px 21px 2px rgba(0, 0, 0, 0.14),0px 5px 26px 4px rgba(0, 0, 0, 0.12)",
                              "0px 8px 9px -5px rgba(0, 0, 0, 0.2),0px 15px 22px 2px rgba(0, 0, 0, 0.14),0px 6px 28px 5px rgba(0, 0, 0, 0.12)",
                              "0px 8px 10px -5px rgba(0, 0, 0, 0.2),0px 16px 24px 2px rgba(0, 0, 0, 0.14),0px 6px 30px 5px rgba(0, 0, 0, 0.12)",
                              "0px 8px 11px -5px rgba(0, 0, 0, 0.2),0px 17px 26px 2px rgba(0, 0, 0, 0.14),0px 6px 32px 5px rgba(0, 0, 0, 0.12)",
                              "0px 9px 11px -5px rgba(0, 0, 0, 0.2),0px 18px 28px 2px rgba(0, 0, 0, 0.14),0px 7px 34px 6px rgba(0, 0, 0, 0.12)",
                              "0px 9px 12px -6px rgba(0, 0, 0, 0.2),0px 19px 29px 2px rgba(0, 0, 0, 0.14),0px 7px 36px 6px rgba(0, 0, 0, 0.12)",
                              "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 20px 31px 3px rgba(0, 0, 0, 0.14),0px 8px 38px 7px rgba(0, 0, 0, 0.12)",
                              "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 21px 33px 3px rgba(0, 0, 0, 0.14),0px 8px 40px 7px rgba(0, 0, 0, 0.12)",
                              "0px 10px 14px -6px rgba(0, 0, 0, 0.2),0px 22px 35px 3px rgba(0, 0, 0, 0.14),0px 8px 42px 7px rgba(0, 0, 0, 0.12)",
                              "0px 11px 14px -7px rgba(0, 0, 0, 0.2),0px 23px 36px 3px rgba(0, 0, 0, 0.14),0px 9px 44px 8px rgba(0, 0, 0, 0.12)",
                              "0px 11px 15px -7px rgba(0, 0, 0, 0.2),0px 24px 38px 3px rgba(0, 0, 0, 0.14),0px 9px 46px 8px rgba(0, 0, 0, 0.12)",
                            ],
                            "shape": Object {
                              "borderRadius": 4,
                            },
                            "spacing": Object {
                              "unit": 8,
                            },
                            "transitions": Object {
                              "create": [Function],
                              "duration": Object {
                                "complex": 375,
                                "enteringScreen": 225,
                                "leavingScreen": 195,
                                "short": 250,
                                "shorter": 200,
                                "shortest": 150,
                                "standard": 300,
                              },
                              "easing": Object {
                                "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
                                "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
                                "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
                                "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
                              },
                              "getAutoHeightDuration": [Function],
                            },
                            "typography": Object {
                              "body1": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 400,
                                "lineHeight": "1.46429em",
                              },
                              "body1Next": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.00938em",
                                "lineHeight": 1.5,
                              },
                              "body2": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 500,
                                "lineHeight": "1.71429em",
                              },
                              "body2Next": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.01071em",
                                "lineHeight": 1.5,
                              },
                              "button": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 500,
                                "textTransform": "uppercase",
                              },
                              "buttonNext": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 500,
                                "letterSpacing": "0.02857em",
                                "lineHeight": 1.5,
                                "textTransform": "uppercase",
                              },
                              "caption": Object {
                                "color": "rgba(0, 0, 0, 0.54)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.75rem",
                                "fontWeight": 400,
                                "lineHeight": "1.375em",
                              },
                              "captionNext": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.75rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.03333em",
                                "lineHeight": 1.66,
                              },
                              "display1": Object {
                                "color": "rgba(0, 0, 0, 0.54)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "2.125rem",
                                "fontWeight": 400,
                                "lineHeight": "1.20588em",
                              },
                              "display2": Object {
                                "color": "rgba(0, 0, 0, 0.54)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "2.8125rem",
                                "fontWeight": 400,
                                "lineHeight": "1.13333em",
                                "marginLeft": "-.02em",
                              },
                              "display3": Object {
                                "color": "rgba(0, 0, 0, 0.54)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "3.5rem",
                                "fontWeight": 400,
                                "letterSpacing": "-.02em",
                                "lineHeight": "1.30357em",
                                "marginLeft": "-.02em",
                              },
                              "display4": Object {
                                "color": "rgba(0, 0, 0, 0.54)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "7rem",
                                "fontWeight": 300,
                                "letterSpacing": "-.04em",
                                "lineHeight": "1.14286em",
                                "marginLeft": "-.04em",
                              },
                              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                              "fontSize": 14,
                              "fontWeightLight": 300,
                              "fontWeightMedium": 500,
                              "fontWeightRegular": 400,
                              "h1": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "6rem",
                                "fontWeight": 300,
                                "letterSpacing": "-0.01562em",
                                "lineHeight": 1,
                              },
                              "h2": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "3.75rem",
                                "fontWeight": 300,
                                "letterSpacing": "-0.00833em",
                                "lineHeight": 1,
                              },
                              "h3": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "3rem",
                                "fontWeight": 400,
                                "letterSpacing": "0em",
                                "lineHeight": 1.04,
                              },
                              "h4": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "2.125rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.00735em",
                                "lineHeight": 1.17,
                              },
                              "h5": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1.5rem",
                                "fontWeight": 400,
                                "letterSpacing": "0em",
                                "lineHeight": 1.33,
                              },
                              "h6": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1.25rem",
                                "fontWeight": 500,
                                "letterSpacing": "0.0075em",
                                "lineHeight": 1.6,
                              },
                              "headline": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1.5rem",
                                "fontWeight": 400,
                                "lineHeight": "1.35417em",
                              },
                              "overline": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.75rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.08333em",
                                "lineHeight": 2.66,
                                "textTransform": "uppercase",
                              },
                              "pxToRem": [Function],
                              "round": [Function],
                              "subheading": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1rem",
                                "fontWeight": 400,
                                "lineHeight": "1.5em",
                              },
                              "subtitle1": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.00938em",
                                "lineHeight": 1.75,
                              },
                              "subtitle2": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 500,
                                "letterSpacing": "0.00714em",
                                "lineHeight": 1.57,
                              },
                              "suppressDeprecationWarnings": undefined,
                              "title": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1.3125rem",
                                "fontWeight": 500,
                                "lineHeight": "1.16667em",
                              },
                              "useNextVariants": false,
                            },
                            "zIndex": Object {
                              "appBar": 1100,
                              "drawer": 1200,
                              "mobileStepper": 1000,
                              "modal": 1300,
                              "snackbar": 1400,
                              "tooltip": 1500,
                            },
                          }
                        }
                        variant="h6"
                      >
                        <h6
                          className="MuiTypography-root-42 MuiTypography-h6-59 MuiTypography-colorInherit-71 Header-grow-1"
                        >
                          Header
                        </h6>
                      </Typography>
                    </WithStyles(Typography)>
                    <div />
                  </div>
                </Toolbar>
              </WithStyles(Toolbar)>
            </header>
          </Paper>
        </WithStyles(Paper)>
      </AppBar>
    </WithStyles(AppBar)>
  </Header>
</WithStyles(Header)>
`;

exports[`<Header/> should render components right of the title 1`] = `
<WithStyles(Header)
  right={
    <WithStyles(Button)>
      button
    </WithStyles(Button)>
  }
>
  <Header
    classes={
      Object {
        "grow": "Header-grow-1",
      }
    }
    right={
      <WithStyles(Button)>
        button
      </WithStyles(Button)>
    }
    title="Header"
  >
    <WithStyles(AppBar)
      position="absolute"
    >
      <AppBar
        classes={
          Object {
            "colorDefault": "MuiAppBar-colorDefault-8",
            "colorPrimary": "MuiAppBar-colorPrimary-9",
            "colorSecondary": "MuiAppBar-colorSecondary-10",
            "positionAbsolute": "MuiAppBar-positionAbsolute-4",
            "positionFixed": "MuiAppBar-positionFixed-3",
            "positionRelative": "MuiAppBar-positionRelative-7",
            "positionStatic": "MuiAppBar-positionStatic-6",
            "positionSticky": "MuiAppBar-positionSticky-5",
            "root": "MuiAppBar-root-2",
          }
        }
        color="primary"
        position="absolute"
      >
        <WithStyles(Paper)
          className="MuiAppBar-root-2 MuiAppBar-positionAbsolute-4 MuiAppBar-colorPrimary-9"
          component="header"
          elevation={4}
          square={true}
        >
          <Paper
            className="MuiAppBar-root-2 MuiAppBar-positionAbsolute-4 MuiAppBar-colorPrimary-9"
            classes={
              Object {
                "elevation0": "MuiPaper-elevation0-13",
                "elevation1": "MuiPaper-elevation1-14",
                "elevation10": "MuiPaper-elevation10-23",
                "elevation11": "MuiPaper-elevation11-24",
                "elevation12": "MuiPaper-elevation12-25",
                "elevation13": "MuiPaper-elevation13-26",
                "elevation14": "MuiPaper-elevation14-27",
                "elevation15": "MuiPaper-elevation15-28",
                "elevation16": "MuiPaper-elevation16-29",
                "elevation17": "MuiPaper-elevation17-30",
                "elevation18": "MuiPaper-elevation18-31",
                "elevation19": "MuiPaper-elevation19-32",
                "elevation2": "MuiPaper-elevation2-15",
                "elevation20": "MuiPaper-elevation20-33",
                "elevation21": "MuiPaper-elevation21-34",
                "elevation22": "MuiPaper-elevation22-35",
                "elevation23": "MuiPaper-elevation23-36",
                "elevation24": "MuiPaper-elevation24-37",
                "elevation3": "MuiPaper-elevation3-16",
                "elevation4": "MuiPaper-elevation4-17",
                "elevation5": "MuiPaper-elevation5-18",
                "elevation6": "MuiPaper-elevation6-19",
                "elevation7": "MuiPaper-elevation7-20",
                "elevation8": "MuiPaper-elevation8-21",
                "elevation9": "MuiPaper-elevation9-22",
                "root": "MuiPaper-root-11",
                "rounded": "MuiPaper-rounded-12",
              }
            }
            component="header"
            elevation={4}
            square={true}
          >
            <header
              className="MuiPaper-root-11 MuiPaper-elevation4-17 MuiAppBar-root-2 MuiAppBar-positionAbsolute-4 MuiAppBar-colorPrimary-9"
            >
              <WithStyles(Toolbar)>
                <Toolbar
                  classes={
                    Object {
                      "dense": "MuiToolbar-dense-41",
                      "gutters": "MuiToolbar-gutters-39",
                      "regular": "MuiToolbar-regular-40",
                      "root": "MuiToolbar-root-38",
                    }
                  }
                  disableGutters={false}
                  variant="regular"
                >
                  <div
                    className="MuiToolbar-root-38 MuiToolbar-regular-40 MuiToolbar-gutters-39"
                  >
                    <WithStyles(Typography)
                      className="Header-grow-1"
                      color="inherit"
                      variant="h6"
                    >
                      <Typography
                        align="inherit"
                        className="Header-grow-1"
                        classes={
                          Object {
                            "alignCenter": "MuiTypography-alignCenter-65",
                            "alignJustify": "MuiTypography-alignJustify-67",
                            "alignLeft": "MuiTypography-alignLeft-64",
                            "alignRight": "MuiTypography-alignRight-66",
                            "body1": "MuiTypography-body1-51",
                            "body2": "MuiTypography-body2-50",
                            "button": "MuiTypography-button-53",
                            "caption": "MuiTypography-caption-52",
                            "colorError": "MuiTypography-colorError-76",
                            "colorInherit": "MuiTypography-colorInherit-71",
                            "colorPrimary": "MuiTypography-colorPrimary-72",
                            "colorSecondary": "MuiTypography-colorSecondary-73",
                            "colorTextPrimary": "MuiTypography-colorTextPrimary-74",
                            "colorTextSecondary": "MuiTypography-colorTextSecondary-75",
                            "display1": "MuiTypography-display1-46",
                            "display2": "MuiTypography-display2-45",
                            "display3": "MuiTypography-display3-44",
                            "display4": "MuiTypography-display4-43",
                            "gutterBottom": "MuiTypography-gutterBottom-69",
                            "h1": "MuiTypography-h1-54",
                            "h2": "MuiTypography-h2-55",
                            "h3": "MuiTypography-h3-56",
                            "h4": "MuiTypography-h4-57",
                            "h5": "MuiTypography-h5-58",
                            "h6": "MuiTypography-h6-59",
                            "headline": "MuiTypography-headline-47",
                            "noWrap": "MuiTypography-noWrap-68",
                            "overline": "MuiTypography-overline-62",
                            "paragraph": "MuiTypography-paragraph-70",
                            "root": "MuiTypography-root-42",
                            "srOnly": "MuiTypography-srOnly-63",
                            "subheading": "MuiTypography-subheading-49",
                            "subtitle1": "MuiTypography-subtitle1-60",
                            "subtitle2": "MuiTypography-subtitle2-61",
                            "title": "MuiTypography-title-48",
                          }
                        }
                        color="inherit"
                        gutterBottom={false}
                        headlineMapping={
                          Object {
                            "body1": "p",
                            "body2": "p",
                            "display1": "h1",
                            "display2": "h1",
                            "display3": "h1",
                            "display4": "h1",
                            "h1": "h1",
                            "h2": "h2",
                            "h3": "h3",
                            "h4": "h4",
                            "h5": "h5",
                            "h6": "h6",
                            "headline": "h1",
                            "subheading": "h3",
                            "subtitle1": "h6",
                            "subtitle2": "h6",
                            "title": "h2",
                          }
                        }
                        noWrap={false}
                        paragraph={false}
                        theme={
                          Object {
                            "breakpoints": Object {
                              "between": [Function],
                              "down": [Function],
                              "keys": Array [
                                "xs",
                                "sm",
                                "md",
                                "lg",
                                "xl",
                              ],
                              "only": [Function],
                              "up": [Function],
                              "values": Object {
                                "lg": 1280,
                                "md": 960,
                                "sm": 600,
                                "xl": 1920,
                                "xs": 0,
                              },
                              "width": [Function],
                            },
                            "direction": "ltr",
                            "mixins": Object {
                              "gutters": [Function],
                              "toolbar": Object {
                                "@media (min-width:0px) and (orientation: landscape)": Object {
                                  "minHeight": 48,
                                },
                                "@media (min-width:600px)": Object {
                                  "minHeight": 64,
                                },
                                "minHeight": 56,
                              },
                            },
                            "overrides": Object {},
                            "palette": Object {
                              "action": Object {
                                "active": "rgba(0, 0, 0, 0.54)",
                                "disabled": "rgba(0, 0, 0, 0.26)",
                                "disabledBackground": "rgba(0, 0, 0, 0.12)",
                                "hover": "rgba(0, 0, 0, 0.08)",
                                "hoverOpacity": 0.08,
                                "selected": "rgba(0, 0, 0, 0.14)",
                              },
                              "augmentColor": [Function],
                              "background": Object {
                                "default": "#fafafa",
                                "paper": "#fff",
                              },
                              "common": Object {
                                "black": "#000",
                                "white": "#fff",
                              },
                              "contrastThreshold": 3,
                              "divider": "rgba(0, 0, 0, 0.12)",
                              "error": Object {
                                "contrastText": "#fff",
                                "dark": "#d32f2f",
                                "light": "#e57373",
                                "main": "#f44336",
                              },
                              "getContrastText": [Function],
                              "grey": Object {
                                "100": "#f5f5f5",
                                "200": "#eeeeee",
                                "300": "#e0e0e0",
                                "400": "#bdbdbd",
                                "50": "#fafafa",
                                "500": "#9e9e9e",
                                "600": "#757575",
                                "700": "#616161",
                                "800": "#424242",
                                "900": "#212121",
                                "A100": "#d5d5d5",
                                "A200": "#aaaaaa",
                                "A400": "#303030",
                                "A700": "#616161",
                              },
                              "primary": Object {
                                "contrastText": "#fff",
                                "dark": "#303f9f",
                                "light": "#7986cb",
                                "main": "#3f51b5",
                              },
                              "secondary": Object {
                                "contrastText": "#fff",
                                "dark": "#c51162",
                                "light": "#ff4081",
                                "main": "#f50057",
                              },
                              "text": Object {
                                "disabled": "rgba(0, 0, 0, 0.38)",
                                "hint": "rgba(0, 0, 0, 0.38)",
                                "primary": "rgba(0, 0, 0, 0.87)",
                                "secondary": "rgba(0, 0, 0, 0.54)",
                              },
                              "tonalOffset": 0.2,
                              "type": "light",
                            },
                            "props": Object {},
                            "shadows": Array [
                              "none",
                              "0px 1px 3px 0px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 2px 1px -1px rgba(0, 0, 0, 0.12)",
                              "0px 1px 5px 0px rgba(0, 0, 0, 0.2),0px 2px 2px 0px rgba(0, 0, 0, 0.14),0px 3px 1px -2px rgba(0, 0, 0, 0.12)",
                              "0px 1px 8px 0px rgba(0, 0, 0, 0.2),0px 3px 4px 0px rgba(0, 0, 0, 0.14),0px 3px 3px -2px rgba(0, 0, 0, 0.12)",
                              "0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 1px 10px 0px rgba(0, 0, 0, 0.12)",
                              "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12)",
                              "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12)",
                              "0px 4px 5px -2px rgba(0, 0, 0, 0.2),0px 7px 10px 1px rgba(0, 0, 0, 0.14),0px 2px 16px 1px rgba(0, 0, 0, 0.12)",
                              "0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12)",
                              "0px 5px 6px -3px rgba(0, 0, 0, 0.2),0px 9px 12px 1px rgba(0, 0, 0, 0.14),0px 3px 16px 2px rgba(0, 0, 0, 0.12)",
                              "0px 6px 6px -3px rgba(0, 0, 0, 0.2),0px 10px 14px 1px rgba(0, 0, 0, 0.14),0px 4px 18px 3px rgba(0, 0, 0, 0.12)",
                              "0px 6px 7px -4px rgba(0, 0, 0, 0.2),0px 11px 15px 1px rgba(0, 0, 0, 0.14),0px 4px 20px 3px rgba(0, 0, 0, 0.12)",
                              "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 12px 17px 2px rgba(0, 0, 0, 0.14),0px 5px 22px 4px rgba(0, 0, 0, 0.12)",
                              "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 13px 19px 2px rgba(0, 0, 0, 0.14),0px 5px 24px 4px rgba(0, 0, 0, 0.12)",
                              "0px 7px 9px -4px rgba(0, 0, 0, 0.2),0px 14px 21px 2px rgba(0, 0, 0, 0.14),0px 5px 26px 4px rgba(0, 0, 0, 0.12)",
                              "0px 8px 9px -5px rgba(0, 0, 0, 0.2),0px 15px 22px 2px rgba(0, 0, 0, 0.14),0px 6px 28px 5px rgba(0, 0, 0, 0.12)",
                              "0px 8px 10px -5px rgba(0, 0, 0, 0.2),0px 16px 24px 2px rgba(0, 0, 0, 0.14),0px 6px 30px 5px rgba(0, 0, 0, 0.12)",
                              "0px 8px 11px -5px rgba(0, 0, 0, 0.2),0px 17px 26px 2px rgba(0, 0, 0, 0.14),0px 6px 32px 5px rgba(0, 0, 0, 0.12)",
                              "0px 9px 11px -5px rgba(0, 0, 0, 0.2),0px 18px 28px 2px rgba(0, 0, 0, 0.14),0px 7px 34px 6px rgba(0, 0, 0, 0.12)",
                              "0px 9px 12px -6px rgba(0, 0, 0, 0.2),0px 19px 29px 2px rgba(0, 0, 0, 0.14),0px 7px 36px 6px rgba(0, 0, 0, 0.12)",
                              "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 20px 31px 3px rgba(0, 0, 0, 0.14),0px 8px 38px 7px rgba(0, 0, 0, 0.12)",
                              "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 21px 33px 3px rgba(0, 0, 0, 0.14),0px 8px 40px 7px rgba(0, 0, 0, 0.12)",
                              "0px 10px 14px -6px rgba(0, 0, 0, 0.2),0px 22px 35px 3px rgba(0, 0, 0, 0.14),0px 8px 42px 7px rgba(0, 0, 0, 0.12)",
                              "0px 11px 14px -7px rgba(0, 0, 0, 0.2),0px 23px 36px 3px rgba(0, 0, 0, 0.14),0px 9px 44px 8px rgba(0, 0, 0, 0.12)",
                              "0px 11px 15px -7px rgba(0, 0, 0, 0.2),0px 24px 38px 3px rgba(0, 0, 0, 0.14),0px 9px 46px 8px rgba(0, 0, 0, 0.12)",
                            ],
                            "shape": Object {
                              "borderRadius": 4,
                            },
                            "spacing": Object {
                              "unit": 8,
                            },
                            "transitions": Object {
                              "create": [Function],
                              "duration": Object {
                                "complex": 375,
                                "enteringScreen": 225,
                                "leavingScreen": 195,
                                "short": 250,
                                "shorter": 200,
                                "shortest": 150,
                                "standard": 300,
                              },
                              "easing": Object {
                                "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
                                "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
                                "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
                                "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
                              },
                              "getAutoHeightDuration": [Function],
                            },
                            "typography": Object {
                              "body1": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 400,
                                "lineHeight": "1.46429em",
                              },
                              "body1Next": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.00938em",
                                "lineHeight": 1.5,
                              },
                              "body2": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 500,
                                "lineHeight": "1.71429em",
                              },
                              "body2Next": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.01071em",
                                "lineHeight": 1.5,
                              },
                              "button": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 500,
                                "textTransform": "uppercase",
                              },
                              "buttonNext": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 500,
                                "letterSpacing": "0.02857em",
                                "lineHeight": 1.5,
                                "textTransform": "uppercase",
                              },
                              "caption": Object {
                                "color": "rgba(0, 0, 0, 0.54)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.75rem",
                                "fontWeight": 400,
                                "lineHeight": "1.375em",
                              },
                              "captionNext": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.75rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.03333em",
                                "lineHeight": 1.66,
                              },
                              "display1": Object {
                                "color": "rgba(0, 0, 0, 0.54)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "2.125rem",
                                "fontWeight": 400,
                                "lineHeight": "1.20588em",
                              },
                              "display2": Object {
                                "color": "rgba(0, 0, 0, 0.54)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "2.8125rem",
                                "fontWeight": 400,
                                "lineHeight": "1.13333em",
                                "marginLeft": "-.02em",
                              },
                              "display3": Object {
                                "color": "rgba(0, 0, 0, 0.54)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "3.5rem",
                                "fontWeight": 400,
                                "letterSpacing": "-.02em",
                                "lineHeight": "1.30357em",
                                "marginLeft": "-.02em",
                              },
                              "display4": Object {
                                "color": "rgba(0, 0, 0, 0.54)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "7rem",
                                "fontWeight": 300,
                                "letterSpacing": "-.04em",
                                "lineHeight": "1.14286em",
                                "marginLeft": "-.04em",
                              },
                              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                              "fontSize": 14,
                              "fontWeightLight": 300,
                              "fontWeightMedium": 500,
                              "fontWeightRegular": 400,
                              "h1": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "6rem",
                                "fontWeight": 300,
                                "letterSpacing": "-0.01562em",
                                "lineHeight": 1,
                              },
                              "h2": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "3.75rem",
                                "fontWeight": 300,
                                "letterSpacing": "-0.00833em",
                                "lineHeight": 1,
                              },
                              "h3": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "3rem",
                                "fontWeight": 400,
                                "letterSpacing": "0em",
                                "lineHeight": 1.04,
                              },
                              "h4": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "2.125rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.00735em",
                                "lineHeight": 1.17,
                              },
                              "h5": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1.5rem",
                                "fontWeight": 400,
                                "letterSpacing": "0em",
                                "lineHeight": 1.33,
                              },
                              "h6": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1.25rem",
                                "fontWeight": 500,
                                "letterSpacing": "0.0075em",
                                "lineHeight": 1.6,
                              },
                              "headline": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1.5rem",
                                "fontWeight": 400,
                                "lineHeight": "1.35417em",
                              },
                              "overline": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.75rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.08333em",
                                "lineHeight": 2.66,
                                "textTransform": "uppercase",
                              },
                              "pxToRem": [Function],
                              "round": [Function],
                              "subheading": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1rem",
                                "fontWeight": 400,
                                "lineHeight": "1.5em",
                              },
                              "subtitle1": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1rem",
                                "fontWeight": 400,
                                "letterSpacing": "0.00938em",
                                "lineHeight": 1.75,
                              },
                              "subtitle2": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "0.875rem",
                                "fontWeight": 500,
                                "letterSpacing": "0.00714em",
                                "lineHeight": 1.57,
                              },
                              "suppressDeprecationWarnings": undefined,
                              "title": Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                                "fontSize": "1.3125rem",
                                "fontWeight": 500,
                                "lineHeight": "1.16667em",
                              },
                              "useNextVariants": false,
                            },
                            "zIndex": Object {
                              "appBar": 1100,
                              "drawer": 1200,
                              "mobileStepper": 1000,
                              "modal": 1300,
                              "snackbar": 1400,
                              "tooltip": 1500,
                            },
                          }
                        }
                        variant="h6"
                      >
                        <h6
                          className="MuiTypography-root-42 MuiTypography-h6-59 MuiTypography-colorInherit-71 Header-grow-1"
                        >
                          Header
                        </h6>
                      </Typography>
                    </WithStyles(Typography)>
                    <div>
                      <WithStyles(Button)>
                        <Button
                          classes={
                            Object {
                              "colorInherit": "MuiButton-colorInherit-98",
                              "contained": "MuiButton-contained-88",
                              "containedPrimary": "MuiButton-containedPrimary-89",
                              "containedSecondary": "MuiButton-containedSecondary-90",
                              "disabled": "MuiButton-disabled-97",
                              "extendedFab": "MuiButton-extendedFab-95",
                              "fab": "MuiButton-fab-94",
                              "flat": "MuiButton-flat-82",
                              "flatPrimary": "MuiButton-flatPrimary-83",
                              "flatSecondary": "MuiButton-flatSecondary-84",
                              "focusVisible": "MuiButton-focusVisible-96",
                              "fullWidth": "MuiButton-fullWidth-102",
                              "label": "MuiButton-label-78",
                              "mini": "MuiButton-mini-99",
                              "outlined": "MuiButton-outlined-85",
                              "outlinedPrimary": "MuiButton-outlinedPrimary-86",
                              "outlinedSecondary": "MuiButton-outlinedSecondary-87",
                              "raised": "MuiButton-raised-91",
                              "raisedPrimary": "MuiButton-raisedPrimary-92",
                              "raisedSecondary": "MuiButton-raisedSecondary-93",
                              "root": "MuiButton-root-77",
                              "sizeLarge": "MuiButton-sizeLarge-101",
                              "sizeSmall": "MuiButton-sizeSmall-100",
                              "text": "MuiButton-text-79",
                              "textPrimary": "MuiButton-textPrimary-80",
                              "textSecondary": "MuiButton-textSecondary-81",
                            }
                          }
                          color="default"
                          component="button"
                          disableFocusRipple={false}
                          disabled={false}
                          fullWidth={false}
                          mini={false}
                          size="medium"
                          type="button"
                          variant="text"
                        >
                          <WithStyles(ButtonBase)
                            className="MuiButton-root-77 MuiButton-text-79 MuiButton-flat-82"
                            component="button"
                            disabled={false}
                            focusRipple={true}
                            focusVisibleClassName="MuiButton-focusVisible-96"
                            type="button"
                          >
                            <ButtonBase
                              centerRipple={false}
                              className="MuiButton-root-77 MuiButton-text-79 MuiButton-flat-82"
                              classes={
                                Object {
                                  "disabled": "MuiButtonBase-disabled-104",
                                  "focusVisible": "MuiButtonBase-focusVisible-105",
                                  "root": "MuiButtonBase-root-103",
                                }
                              }
                              component="button"
                              disableRipple={false}
                              disableTouchRipple={false}
                              disabled={false}
                              focusRipple={true}
                              focusVisibleClassName="MuiButton-focusVisible-96"
                              tabIndex="0"
                              type="button"
                            >
                              <button
                                className="MuiButtonBase-root-103 MuiButton-root-77 MuiButton-text-79 MuiButton-flat-82"
                                disabled={false}
                                onBlur={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                onKeyUp={[Function]}
                                onMouseDown={[Function]}
                                onMouseLeave={[Function]}
                                onMouseUp={[Function]}
                                onTouchEnd={[Function]}
                                onTouchMove={[Function]}
                                onTouchStart={[Function]}
                                tabIndex="0"
                                type="button"
                              >
                                <span
                                  className="MuiButton-label-78"
                                >
                                  button
                                </span>
                                <WithStyles(TouchRipple)
                                  center={false}
                                  innerRef={[Function]}
                                >
                                  <TouchRipple
                                    center={false}
                                    classes={
                                      Object {
                                        "child": "MuiTouchRipple-child-110",
                                        "childLeaving": "MuiTouchRipple-childLeaving-111",
                                        "childPulsate": "MuiTouchRipple-childPulsate-112",
                                        "ripple": "MuiTouchRipple-ripple-107",
                                        "ripplePulsate": "MuiTouchRipple-ripplePulsate-109",
                                        "rippleVisible": "MuiTouchRipple-rippleVisible-108",
                                        "root": "MuiTouchRipple-root-106",
                                      }
                                    }
                                  >
                                    <TransitionGroup
                                      childFactory={[Function]}
                                      className="MuiTouchRipple-root-106"
                                      component="span"
                                      enter={true}
                                      exit={true}
                                    >
                                      <span
                                        className="MuiTouchRipple-root-106"
                                      />
                                    </TransitionGroup>
                                  </TouchRipple>
                                </WithStyles(TouchRipple)>
                              </button>
                            </ButtonBase>
                          </WithStyles(ButtonBase)>
                        </Button>
                      </WithStyles(Button)>
                    </div>
                  </div>
                </Toolbar>
              </WithStyles(Toolbar)>
            </header>
          </Paper>
        </WithStyles(Paper)>
      </AppBar>
    </WithStyles(AppBar)>
  </Header>
</WithStyles(Header)>
`;
